Moved to Limine 4.0

--- a/limine.cfg
+++ b/limine.cfg
@@ -1,22 +1,11 @@
 TIMEOUT=0
 INTERFACE_BRANDING=Fennix Project
 
-:Fennix Project (Stivale2)
-# DO NOT EDIT!
-COMMENT=Boot Fennix Project using Stivale2 protocol (Default)
-DEPRECATION_WARNING=no
-RESOLUTION=1280x720
-PROTOCOL=stivale2
-KERNEL_CMDLINE=debug no4gbcap monotasking
-KERNEL_PATH=boot:///kernel.fsys
-MODULE_PATH=boot:///initrd.tar.gz
-MODULE_STRING=ustar
-
 :Fennix Project (Limine)
 # DO NOT EDIT!
-COMMENT=Boot Fennix Project using Limine protocol (not tested yet)
+COMMENT=Boot Fennix Project using Limine protocol
+RESOLUTION=1280x720
 PROTOCOL=limine
-KERNEL_CMDLINE=debug
+KERNEL_CMDLINE=debug monotasking
 KERNEL_PATH=boot:///kernel.fsys
 MODULE_PATH=boot:///initrd.tar.gz
-MODULE_STRING=ustar
