--- a/libc/crt/Makefile
+++ b/libc/crt/Makefile
@@ -1,8 +1,15 @@
+include ../../Makefile.conf
 
 C_SOURCES = $(shell find ./ -type f -name '*.c')
 S_SOURCES = $(shell find ./ -type f -name '*.s')
 ASM_SOURCES = $(shell find ./ -type f -name '*.asm')
 OBJ = ${C_SOURCES:.c=.o} ${ASM_SOURCES:.asm=.o} ${S_SOURCES:.s=.o}
+
+ifeq ($(OSARCH), amd64)
+ASM_ARCH := elf64
+else ifeq ($(OSARCH), i686)
+ASM_ARCH := elf32
+endif
 
 build: $(OBJ)
 	mv $^ ../../resources/initrd/system/lib/
@@ -11,10 +18,10 @@ build: $(OBJ)
 	$(CC) -nostdlib -std=c17 -c $< -o $@
 
 %.o: %.asm
-	${NASM} $< -f elf64 -o $@
+	$(NASM) $< -f $(ASM_ARCH) -o $@
 
 %.bin: %.s
-	${NASM} $< -f elf64 -o $@
+	$(NASM) $< -f $(ASM_ARCH) -o $@
 
 clean:
 	rm -f ../../resources/initrd/system/lib/*.o
