kernel: 32bit support

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -5,16 +5,16 @@ DEBUG = 1
 OSNAME = FennixProject
 
 # OS architecture: amd64, i686, aarch64
-OSARCH = amd64
+OSARCH = i686
 
 # Kernel version.
 KERNEL_VERSION = alpha-0.0.1
 
 # Which bootloader to use.
 # Available bootloaders:
-#   - lynx     - Lynx Bootloader
-#   - limine   - Limine Bootloader
-BOOTLOADER=limine
+#   - lynx     - Lynx Bootloader (still under development)
+#   - other    - Limine & GRUB Bootloader
+BOOTLOADER=other
 
 # The path of the cross compiler.
 # If you want to use your own cross compiler (which I don't recommend),
