--- a/limine.cfg
+++ b/limine.cfg
@@ -1,9 +1,9 @@
 TIMEOUT=0
-INTERFACE_BRANDING=Fennix Project
+INTERFACE_BRANDING=Fennix
 
-:Fennix Project (Limine)
+:Fennix (Limine)
 # DO NOT EDIT!
-COMMENT=Boot Fennix Project using Limine protocol
+COMMENT=Boot Fennix using Limine protocol
 RESOLUTION=1280x720
 PROTOCOL=limine
 KERNEL_CMDLINE=debug monotasking
