--- a/boot/BIOS/Makefile
+++ b/boot/BIOS/Makefile
@@ -2,7 +2,9 @@
 NASM = /usr/bin/nasm
 
 build:
-	$(NASM) boot.asm -f bin -o loader.bin
+	$(NASM) boot.asm -f bin -o boot.bin
+	$(NASM) second.asm -f bin -o second.bin
+	cat boot.bin second.bin > loader.bin
 
 clean:
-	rm -f loader.bin
+	rm -f boot.bin second.bin loader.bin
