--- a/Makefile.conf
+++ b/Makefile.conf
@@ -5,7 +5,7 @@ DEBUG = 1
 OSNAME = FennixProject
 
 # OS architecture: amd64, i686, aarch64
-OSARCH = i686
+OSARCH = amd64
 
 # Kernel version.
 KERNEL_VERSION = alpha-0.0.1
