--- a/limine.cfg
+++ b/limine.cfg
@@ -6,6 +6,6 @@ INTERFACE_BRANDING=Fennix
 COMMENT=Boot Fennix using Limine protocol
 RESOLUTION=1280x720
 PROTOCOL=limine
-KERNEL_CMDLINE=debug monotasking
+KERNEL_CMDLINE=debug
 KERNEL_PATH=boot:///kernel.fsys
 MODULE_PATH=boot:///initrd.tar.gz
