--- a/Makefile.conf
+++ b/Makefile.conf
@@ -17,7 +17,7 @@ KERNEL_VERSION = alpha-0.0.1
 BOOTLOADER=other
 
 # The path of the cross compiler.
-# If you want to use your own cross compiler (which I don't recommend),
+# If you want to use your own cross compiler,
 # change it to the path of the compiler.
 COMPILER_PATH = tools/cross/bin
 
@@ -34,8 +34,8 @@ UNIT_TESTS = 0
 
 
 
-
 # make releated variables
+# DO NOT TOUCH!
 
 ifeq ($(OSARCH), amd64)
 COMPILER_ARCH = amd64-elf-
