Prepare for ARM

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -19,15 +19,26 @@ GIT_COMMIT_SHORT ?= unknown
 
 BMP_SOURCES = $(shell find ./ -type f -name '*.bmp')
 PSF_SOURCES = $(shell find ./ -type f -name '*.psf')
-ASM_SOURCES = $(shell find ./ -type f -name '*.asm')
-S_SOURCES = $(shell find ./ -type f -name '*.s')
-SS_SOURCES = $(shell find ./ -type f -name '*.S')
-C_SOURCES = $(shell find ./ -type f -name '*.c')
-CPP_SOURCES = $(shell find ./ -type f -name '*.cpp')
+ifeq ($(OSARCH), amd64)
+ASM_SOURCES = $(shell find ./ -type f -name '*.asm' -not -path "./arch/i686/*" -not -path "./arch/aarch64/*")
+S_SOURCES = $(shell find ./ -type f -name '*.S' -not -path "./arch/i686/*" -not -path "./arch/aarch64/*")
+C_SOURCES = $(shell find ./ -type f -name '*.c' -not -path "./arch/i686/*" -not -path "./arch/aarch64/*")
+CPP_SOURCES = $(shell find ./ -type f -name '*.cpp' -not -path "./arch/i686/*" -not -path "./arch/aarch64/*")
+else ifeq ($(OSARCH), i686)
+ASM_SOURCES = $(shell find ./ -type f -name '*.asm' -not -path "./arch/amd64/*" -not -path "./arch/aarch64/*")
+S_SOURCES = $(shell find ./ -type f -name '*.S' -not -path "./arch/amd64/*" -not -path "./arch/aarch64/*")
+C_SOURCES = $(shell find ./ -type f -name '*.c' -not -path "./arch/amd64/*" -not -path "./arch/aarch64/*")
+CPP_SOURCES = $(shell find ./ -type f -name '*.cpp' -not -path "./arch/amd64/*" -not -path "./arch/aarch64/*")
+else ifeq ($(OSARCH), aarch64)
+ASM_SOURCES = $(shell find ./ -type f -name '*.asm' -not -path "./arch/amd64/*" -not -path "./arch/i686/*")
+S_SOURCES = $(shell find ./ -type f -name '*.S' -not -path "./arch/amd64/*" -not -path "./arch/i686/*")
+C_SOURCES = $(shell find ./ -type f -name '*.c' -not -path "./arch/amd64/*" -not -path "./arch/i686/*")
+CPP_SOURCES = $(shell find ./ -type f -name '*.cpp' -not -path "./arch/amd64/*" -not -path "./arch/i686/*")
+endif
 MAKE_DEPS_SOURCES = $(shell find ./ -type f -name '*.d')
 HEADERS = $(sort $(dir $(wildcard ./include/*)))
 HEADERS2 = $(sort $(dir $(wildcard ../include/*)))
-OBJ = $(C_SOURCES:.c=.o) $(CPP_SOURCES:.cpp=.o) $(ASM_SOURCES:.asm=.o) $(S_SOURCES:.s=.o) $(SS_SOURCES:.S=.o) $(PSF_SOURCES:.psf=.o) $(BMP_SOURCES:.bmp=.o)
+OBJ = $(C_SOURCES:.c=.o) $(CPP_SOURCES:.cpp=.o) $(ASM_SOURCES:.asm=.o) $(S_SOURCES:.S=.o) $(PSF_SOURCES:.psf=.o) $(BMP_SOURCES:.bmp=.o)
 INCLUDE_DIR = ./include
 INCLUDE_DIR2 = ../include
 KERNEL = kernel.fsys
@@ -40,17 +51,15 @@ LDFLAGS := 									\
 	-Wl,-Map kernel.map -shared
 
 ifeq ($(OSARCH), amd64)
-NASMFLAGS := -f elf64 -DAMD64
+NASMFLAGS := -f elf64 -DAMD64=1
 else ifeq ($(OSARCH), i686)
-NASMFLAGS := -f elf32 -Di686
+NASMFLAGS := -f elf32 -Di686=1
 else ifeq ($(OSARCH), aarch64)
-NASMFLAGS := -f elf32 -DARM64
+NASMFLAGS := -f elf32 -DARM64=1
 endif
 
 # Disable all warnings by adding "-w" in WARNCFLAG and if you want to treat the warnings as errors, add "-Werror"
 WARNCFLAG = -Wall -Wextra -Wno-comment
-
-CFLAG_STACK_PROTECTOR := -fstack-protector-all
 
 # Change march with minimum supported cpu // https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html
 CFLAGS :=										\
@@ -66,16 +75,19 @@ CFLAGS += -fno-pic -fno-pie -mno-80387 -mno-mmx -mno-3dnow	\
 		  -march=nehalem -pipe								\
 		  -mcmodel=kernel -msoft-float -fno-builtin
 
+CFLAG_STACK_PROTECTOR := -fstack-protector-all
 LDFLAGS += -Tlinker-amd64.ld
 else ifeq ($(OSARCH), i686)
 CFLAGS += -fno-pic -fno-pie -mno-80387 -mno-mmx -mno-3dnow	\
 		  -mno-red-zone -mno-sse -mno-sse2					\
 		  -march=nehalem -pipe -msoft-float -fno-builtin
 
-LDFLAGS += -Tlinker-i686.ld
+CFLAG_STACK_PROTECTOR := -fstack-protector-all
+LDFLAGS += -Tlinker-i686.ld -fPIC
 else ifeq ($(OSARCH), aarch64)
-CFLAGS += -fno-pic -fno-pie -pipe -fno-builtin
+CFLAGS += -pipe -fno-builtin -fPIC
 
+CFLAG_STACK_PROTECTOR := -fno-stack-protector
 LDFLAGS += -Tlinker-aarch64.ld
 endif
 
@@ -125,7 +137,7 @@ ifeq ($(OSARCH), amd64)
 else ifeq ($(OSARCH), i686)
 	$(OBJCOPY) -O elf32-i386 -I binary $< $@
 else ifeq ($(OSARCH), aarch64)
-	$(OBJCOPY) -O elf64-bigaarch64 -I binary $< $@
+	$(OBJCOPY) -O elf64-littleaarch64 -I binary $< $@
 endif
 	nm $@
 
@@ -135,7 +147,7 @@ ifeq ($(OSARCH), amd64)
 else ifeq ($(OSARCH), i686)
 	$(OBJCOPY) -O elf32-i386 -I binary $< $@
 else ifeq ($(OSARCH), aarch64)
-	$(OBJCOPY) -O elf64-bigaarch64 -I binary $< $@
+	$(OBJCOPY) -O elf64-littleaarch64 -I binary $< $@
 endif
 	nm $@
 
